aws/cloudformation/function_transform_include/autoscaling_with_yaml_userdata.yaml
---

AWSTemplateFormatVersion: '2010-09-09'

Description: Create a VPC containing two subnets and an Auto Scaling Group with Internet access. Most importantly, utilize a Fn::Transform to include a file.

Parameters:

  ubuntuAMISMapping3Location:
    Description: location where the Ubuntu AMI Mapping file is located
    Type: String
    Default: s3://187376578462-fn-transform-include/ubuntu_ami.yaml

  ServerInstanceType:
    Description: Server EC2 instance type
    Type: String
    Default: t2.nano
    AllowedValues:
      - t2.nano
    ConstraintDescription: must be a valid EC2 instance type.

Mappings:

  AWSInstanceType2Arch:
    t2.nano:
      Arch: 64

  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location : !Ref ubuntuAMISMapping3Location

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  PublicInternetRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - InternetGateway
      - PublicInternetRouteTable
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicInternetRouteTable

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicInternetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref VPC

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicInternetRouteTable
      SubnetId: !Ref PublicSubnet

  ServerLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: true
      ImageId:
        Fn::FindInMap:
          - AWSRegionArch2AMI
          - Ref: AWS::Region
          - Fn::FindInMap:
            - AWSInstanceType2Arch
            - Ref: ServerInstanceType
            - Arch
      SecurityGroups:
        - !Ref ServerSecurityGroup
      InstanceType: !Ref ServerInstanceType

  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Server Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0

  ServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - !Ref PublicSubnet
      LaunchConfigurationName: !Ref ServerLaunchConfig
      MinSize: 1
      MaxSize: 1
      DesiredCapacity: 1

Outputs: {}
